regression/fail/free-type-variable.2.sml
val _ =
   let
      datatype t = T of 'a
   in
      ()
   end
